# EGX-Stock-Price-Prediction

./: .gitignore  GEMINI.md  LINKEDIN_BRIEF.md  README.md  check_syntax.py  pyproject.toml  remediation.patch  requirements-dev.txt  requirements.txt  ruff.toml  test_sheet_insights.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
data/metadata/: cross_listings.json  model_registry.json
specs/001-egx-price-prediction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-investment-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-quant-finance-integration/: data-model.md  gdr-premium-discount-research.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-stock-sheet-insights/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/app/: __init__.py  main.py
src/core/: __init__.py  backtest.py  config.py  indicators.py  momentum.py  quant.py  schemas.py  series_utils.py  support_resistance.py  trading_calendar.py
src/data/: __init__.py  cache_store.py  discover_egx_stocks.py  normalize.py  stock_universe.py  symbol_config.py
src/ml/: __init__.py  baselines.py  config.py  dataset.py  federated_train.py  inference.py  metrics.py  persistence.py  portfolio.py  train.py
src/services/: __init__.py  artifact_paths.py  backtest_service.py  gdr_bridge_service.py  model_registry.py  model_staleness.py  portfolio_service.py  (+10 more)
(+37 files in other folders)
