[project]
name = "egx-price-prediction"
version = "0.1.0"
description = "Local desktop app for EGX stock price prediction using PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
egx-predictor = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
